--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                                 and grow with the organization.....</p>
                             <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
                             <a href="Kunal-Resume.pdf" target="_blank" class="btn hire-me">Download CV</a>
+                            <a href="https://drive.google.com/drive/folders/1KIbgZhpE7aBaXCRKQ2afxjhxsmrH_kyF?usp=drive_link" target="_blank" class="btn hire-me">Certificates CV</a>
                         </div>
                         <div class="home-img padd-15">
                             <img src="images/kunal.jpg" alt="I's me">
