--- a/index.html
+++ b/index.html
@@ -248,11 +248,14 @@
                                                     <li> Deployed in department of Production and Quality control
                                                         (PQCMC),
                                                         Manesar plant.</li>
-                                                    <li>Monitoring the ABOK inspection section, Updating Dent Agenda and
-                                                        GCA report on daily basis.</li>
-                                                    <li>Used to make excel sheet and presentation of monthly trend of
-                                                        dent
-                                                        report from various responsible shop.</li>
+                                                    <li>Monitoring the ABOK inspection section Created and managed excel sheets and presentations for Morning meeting data 
+and Global consumer Audit (GCA) report on daily basis. </li>
+                                                    <li>Analysis of data from dent report and updating PQC board.</li>
+                                                    <li>Supervision of workman in PQCMC department.</li>
+                                                    <li>Project Work:- Defected Vehicle Data analysis - Develop and improve a system (Quality gate) to gather and analyze 
+data from connected vehicles, focusing on factors like defects, fuel efficiency, maintenance needs, and safety 
+measures. This could involve creating data visualization dashboards and implementing predictive defect 
+maintenance algorithms.</li>
                                                 </p>
                                             </div>
 
